Fix spacing and wrapping on pricing and add border bottom to navbar

--- a/website/src/css/components/_Header.scss
+++ b/website/src/css/components/_Header.scss
@@ -42,8 +42,7 @@
         }
     }
 }
-
-.navborder {
+.navbar-light {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -54,8 +53,5 @@
     .darkBackground .navbar-nav .btn,
     .navbar-light .navbar-nav .btn {
         padding: 0.25rem 0.75rem;
-    }
-    .navborder {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
 }
